kubectl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: WORKLOAD
  namespace: NAMESPACE
  labels:
    workload.user.cattle.io/workloadselector: apps.deployment-NAMESPACE-WORKLOAD
spec:
  replicas: REPLICAS
  minReadySeconds: minReadySecondsValue
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-NAMESPACE-WORKLOAD
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-NAMESPACE-WORKLOAD
      namespace: NAMESPACE
    spec:
      containers:
        - image: IMAGE_NAME
          name: CONTAINER_NAME
          ports:
            - containerPort: PORT
              name: PORTtcp
              protocol: TCP
      restartPolicy: Always
      terminationGracePeriodSeconds: terminationGracePeriodSecondsValue
