kubectl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: WORKLOAD
  namespace: NAMESPACE
spec:
  ports:
    - name: PORTtcp
      port: PORT
      protocol: TCP
      targetPort: PORT
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-NAMESPACE-WORKLOAD
