kubectl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: WORKLOAD-ingress
  namespace: NAMESPACE
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"  #此时传输到服务的文件最大可为1024MB
spec:
  rules:
    - host: HOST
      http:
        paths:
          - backend:
              service:
                name: WORKLOAD
                port:
                  number: PORT
            path: /
            pathType: Prefix
